<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MtkActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk1"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk1"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk2"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk2"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk3"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk3"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk4"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk4"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk5"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk5"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk6"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk6"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk7"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk7"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk8"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk8"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk9"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk9"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk10"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk10"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk11"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk11"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk12"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk12"
                    android:scaleType="fitXY"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rumus_mtk13"
                    android:textSize="14sp"
                    android:layout_marginRight="16dp"/>
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rumus_mtk13"
                    android:scaleType="fitXY"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>