<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".SejarahActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:padding="8dp"
                    android:text="Sejarah Singkat Android"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/sejarah_android" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:padding="8dp"
                    android:text="Tujuan Awal Android"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/tujuan_android" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:padding="8dp"
                    android:text="Nasib Para Pendiri Android"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/nasib_pendiri_android" />
            </TableRow>


        </TableLayout>

    </LinearLayout>

</ScrollView>